force-app/main/default/objects/DU_DeletionRecord__c/DU_DeletionRecord__c.object-meta.xml
<CustomObject>
    <description>CDM: Deletion Record is used within the Restriction &amp; Erasure process for GDPR purposes, storing monthly data protection status for Prospects, Leads, Accounts and Contracts. In Salesforce, this data is processed to update visibility of Salesforce records according to data protection status provided on deletion record object.</description>
    <label>Deletion Record</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Deletion Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deletion Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>