force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_BOSubtype__c.field-meta.xml
<CustomField>
    <fullName>DU_BOSubtype__c</fullName>
    <description>CDM: Subtype of business object that is to be (Un)Restricted, LockedForDeletion, Deleted</description>
    <label>BO Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>