force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_BOType__c.field-meta.xml
<CustomField>
    <fullName>DU_BOType__c</fullName>
    <description>CDM: Type of business object that is to be (Un)Restricted, LockedForDeletion, Deleted</description>
    <label>BO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BusinessPartner</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>