force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_DPStatus__c.field-meta.xml
<CustomField>
    <fullName>DU_DPStatus__c</fullName>
    <description>CDM: Status of the executed order (Un)Restricted, LockedForDeletion, Deleted</description>
    <inlineHelpText>Stores the data processing status value from Customer Master Data System and will be used to hide the records from various user roles.</inlineHelpText>
    <label>DP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_DPStatus</valueSetName>
    </valueSet>
</CustomField>