force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_IDkey__c.field-meta.xml
<CustomField>
    <fullName>DU_IDkey__c</fullName>
    <description>CDM: Type of ID for unique identification of the business object</description>
    <label>Id key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>