force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_IDValue__c.field-meta.xml
<CustomField>
    <fullName>DU_IDValue__c</fullName>
    <description>CDM: Value of the ID (numeric or alphanumeric)</description>
    <label>ID Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>