force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_Reason__c.field-meta.xml
<CustomField>
    <fullName>DU_Reason__c</fullName>
    <description>CDM: Text field for the reported status</description>
    <label>Status Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>