force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_RecordId__c.field-meta.xml
<CustomField>
    <fullName>DU_RecordId__c</fullName>
    <description>CDM: Stores the Salesforce ID of the record on which the processing has happened</description>
    <label>Record Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>