force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_RequestID__c.field-meta.xml
<CustomField>
    <fullName>DU_RequestID__c</fullName>
    <description>CDM: Stores the unique ID of the &quot;Restrict and Delete&quot; order on the file that is to be sent back to data protection after processing</description>
    <label>Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>