force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_RunID__c.field-meta.xml
<CustomField>
    <fullName>DU_RunID__c</fullName>
    <description>CDM: Stores one unique ID of an data protection order for an object</description>
    <label>Run ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>