force-app/main/default/objects/DU_DeletionRecord__c/fields/DU_Status__c.field-meta.xml
<CustomField>
    <fullName>DU_Status__c</fullName>
    <description>CDM: Performed order status (Success, Error, NotRelevant)</description>
    <inlineHelpText>Stores the status of the batch job</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>