force-app/main/default/objects/DU_DeletionRecord__c/listViews/DU_All.listView-meta.xml
<ListView>
    <fullName>DU_All</fullName>
    <columns>NAME</columns>
    <columns>DU_IDValue__c</columns>
    <columns>DU_BOType__c</columns>
    <columns>DU_DPStatus__c</columns>
    <columns>DU_Status__c</columns>
    <columns>DU_Reason__c</columns>
    <columns>DU_RecordId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>